Ver.1.4.9
---------
* plasmoid
    * change rendering from Qt to native

Ver.1.4.8
---------
* gui
    * update profile tab to netclt 1.10 and 1.11 changes
* plasmoid
    * fix bug with no action on link activation

Ver.1.4.7
---------
* all
    + implement support of setting of default configuration values while building
    * fix language component (refer to #45)
* gui
    * more correct work with configuration file
* helper
    * more correct work with configuration file

Ver.1.4.6
---------
* all
    + implement time logging feature
* gui
    + implement autoupdate feature
    - fix invalid profile path for the external editor
* library
    + implement netctl-auto support to scanWiFi() method (#44)
    - fix bug with invalid data in netctl-auto profile list output

Ver.1.4.5
---------
* plasmoid
    + add translation support to plugin part
    * more correct interface painting
    * more correct configuration interface painting
    * move plugin from private

Ver.1.4.4
---------
* dataengine
    - fix profile status definition

Ver.1.4.3
---------
* all
    - fix clang build (#41)
    - fix WPA_DRIVERS (#40)
* library
    - fix bug in WpaSup class with invalid returning value

***

Ver.1.4.2
---------
* gui
    * remove Update call to the helper

Ver.1.4.1
---------
* all
    + some Easter eggs
    + add _DEFAULT_SOURCE to avoid gcc warnings
    * refactoring
    * fix cppcheck warnings
    * update 3rdparty components
    * fix language defilition
    * replace General section to Common in settings (see http://doc.qt.io/qt-5/qsettings.html#Format-enum)
* gui
    + allow to change helper control group from UI (#36)
    + allow to open profile in an external editor (#38)
    + add IP validators (#34)
    + add toolbar configuration
    + add notification on hidding to tray
    + add returnPressed() signal to lineEdits
    + implement needToBeConfigured() signal
    - remove margins
    - fix bug with segfault on updating UI with KF5