@@ -3,7 +3,7 @@
 pkgbase=netctl-gui
 pkgname=('libnetctlgui' 'netctlgui-helper' 'netctl-gui'
          'plasma5-applet-netctl-gui')
-pkgver=1.4.8
+pkgver=1.4.9
 pkgrel=1
 pkgdesc="Qt4/Qt5 GUI for netctl. Also provides a widget for KDE"
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ url="http://arcanis.name/projects/netctl-gui"
 license=('GPL3')
 makedepends=('cmake' 'extra-cmake-modules' 'plasma-framework' 'qt5-tools')
 source=("https://github.com/arcan1s/netctl-gui/releases/download/V.${pkgver}/${pkgbase}-${pkgver}-src.tar.xz")
-md5sums=('0c50a436064c31f890f69d5f321d2e27')
+md5sums=('64c04c36eea017e7c0ddf687d60de128')
 
 prepare() {
   rm -rf "${srcdir}/build-"{plasmoid,qt5}
