@@ -4,7 +4,7 @@ pkgbase=netctl-gui-qt4
 _pkgbase=netctl-gui
 pkgname=('libnetctlgui-qt4' 'netctlgui-helper-qt4' 'netctl-gui-qt4'
          'kdeplasma-applets-netctl-gui')
-pkgver=1.4.8
+pkgver=1.4.9
 pkgrel=1
 pkgdesc="Qt4 GUI for netctl. Also provides a widget for KDE4"
 arch=('i686' 'x86_64')
@@ -12,7 +12,7 @@ url="http://arcanis.name/projects/netctl-gui"
 license=('GPL3')
 makedepends=('automoc4' 'cmake' 'kdelibs')
 source=("https://github.com/arcan1s/netctl-gui/releases/download/V.${pkgver}/${_pkgbase}-${pkgver}-src.tar.xz")
-md5sums=('0c50a436064c31f890f69d5f321d2e27')
+md5sums=('64c04c36eea017e7c0ddf687d60de128')
 
 
 prepare() {
